syntax = "proto3";

package com.cloriko.protobuf;

// The greeting service definition.
service MasterSlaveProtocol {
  rpc join      (JoinRequest) returns (JoinReply) {}
  rpc protocol  (stream SlaveResponse) returns (stream MasterRequest) {}
}

message MasterRequest {
  oneof sealed_value {
    OverviewRequest overview_request = 1;
    Delete delete = 2;
    Update update = 3;
  }
}

message SlaveResponse {
  oneof sealed_value {
    JoinReply join_reply = 1;
    Updated updated = 2;
    Deleted deleted = 3;
    Failed failed = 4;
    HeartBeat heartbeat = 5;
  }
}
//Master
message JoinReply {
  string id = 1;
}

message OverviewRequest {
  string id = 1;
  string username = 2;
}

message Delete{
  string id = 1;
  string username = 2;
  string slave_id = 3;
  repeated FileReference references = 4;
}

message Update {
  string username = 1;
  string slave_id = 2;
  File file = 3;
}

//Slave
message JoinRequest {
  string id = 1;
  string username = 2;
  string replica_id = 3;
}

message HeartBeat {
  string replica_id = 1;
}

message Overview {
  string id = 1;
  Directory slave_content = 2;
  Directory replicated_content = 3;
  string space = 4;
}

message Deleted {
  string id = 1;
  string username = 2;
  string slave_id = 3;
}

message Updated {
  string id = 1;
  string username = 2;
  string slave_id = 3;
}

message Failed {
  string id = 1;
}

message FileReference {
  string file_id = 1;
  string file_name = 2;
  string path = 3;
}

message File {
  string file_id = 1;
  string file_name = 2;
  string path = 3;
  bytes data = 4;
}

message Directory {
  string dir_id = 1;
  string dir_name = 2;
  string path = 3;
  repeated Directory directories = 4;
  repeated FileReference files = 5;
}




//Slave protocol
//service SlaveProtocol {
 // rpc overview (OverviewRequest) returns (Overview) {}
 // rpc update   (Update)          returns (Updated) {}
 // rpc delete   (Delete)          returns (Deleted) {}
//}






